--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,12 +3,14 @@
     color: #0f0 !important;
     outline: solid #f00 1px !important;
   } 
+*/
 
- div {
+
+/*    div {
     border: 1px solid red;
-} */ 
+} */
 
-
+/* GLOBAL OPTIONS */
 
 html,body
     {
@@ -17,39 +19,145 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+    font-family: "Heebo", sans-serif;
+}
+
+p {
+    line-height: 1.2;
+
 }
 
 
-/* I'd rather use bootstrap 5 for this */
-.display-6 {
-    font-size: 1.8em;
-    font-weight: 400;
+
+
+/* MOBILE VIEW */
+@media (max-width: 576px) {
+
+    .hero-container {
+        background-image: url('../img/hero_image_mobile.webp'); /* The image used */
+        background-color: #cccccc; /* Used if the image is unavailable */
+        height: 100vh; /* You must set a specified height */
+        width: 100%;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover; /* Resize the background image to cover the entire container */
+        }
+
+        /* START SLOGAN positioning */
+
+        .slogan-position {
+            margin-top: 3vh;
+            margin-bottom: auto;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        /*  END SLOGAN positioning */
+
+
+        h1,.h1 {
+            font-size: 2.2em;
+            font-weight: 300;
+        }
+
+        h2,.h2 {
+            font-size: 1.8em;
+            font-weight: 300;
+        }
+
+        h3,.h3 {
+            font-size: 1.4em;
+            font-weight: 300;
+        }
+
+        .commontext {
+            font-size: 1.2em;
+        }
+
+
+    }
+
+/* DESKTOP VIEW */
+  @media (min-width: 577px) {
+
+    .hero-container {
+        background-image: url('../img/hero_image.webp'); /* The image used */
+        background-color: green; /* Used if the image is unavailable */
+        height: 500px; /* You must set a specified height */
+        width: 100%;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover; /* Resize the background image to cover the entire container */
+        }
+
+        /* START SLOGAN positioning */
+
+        .slogan-position {
+            margin-top: 4vh;
+            margin-bottom: auto;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        /* Global font settings */
+
+        h1,.h1 {
+            font-size: 2.4em;
+            font-weight: 300;
+        }
+
+        h2,.h2 {
+            font-size: 2.0em;
+            font-weight: 300;
+        }
+
+        h3,.h3 {
+            font-size: 1.6em;
+            font-weight: 300;
+        }
+
+        .commontext {
+            font-size: 1.4em;
+            font-weight: 400;
+        }
+
+        
+
+    }
+
+/* Call to action button style */
+
+.btn {
+    width: fit-content;
+    height: fit-content;
+    margin-top: 40px;
+    font-family: "Heebo", sans-serif;
+    font-size: 1.2rem;
+    font-weight: normal;
+    background-color: #87b865;
+    border-radius: 3px;
+    border: 1px solid silver;
+    padding: 16px 36px;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 0.2rem;
+    
+    }
+
+/* Dog vector style */
+
+.dog-image {
+    height: 20vw;
+    width: auto;
 }
 
 
-.hero-container-desktop {
-    background-image: url('../img/hero_1600_500.svg'); /* The image used */
-    background-color: #cccccc; /* Used if the image is unavailable */
-    height: 500px; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
+/* START not needed YET*/
 
-}
 
-.hero-container-mobile {
-    background-image: url('../img/hero_mobile_400_800.svg'); /* The image used */
-    background-color: #cccccc; /* Used if the image is unavailable */
-    height: 800px; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
-
-}
-
-.desk-logo {
-    background-image: url('../img/site_logo_160_60.svg'); /* The image used */
-    background-color: #cccccc; /* Used if the image is unavailable */
+.desk-logoOFF {
+    background-image: url('../img/jalutame_160_60_dark.svg'); /* The image used */
+    background-color: #ffffff; /* Used if the image is unavailable */
     height: 60px; /* You must set a specified height */
     width: 160px;
     background-position: center; /* Center the image */
@@ -58,9 +166,9 @@ html,body
 
 }
 
-.mobile-logo {
-    background-image: url('../img/site_logo_80_30.svg'); /* The image used */
-    background-color: #cccccc; /* Used if the image is unavailable */
+.mobile-logoOFF {
+    background-image: url('../img/jalutame_80_30_dark.svg'); /* The image used */
+    background-color: #ffffff; /* Used if the image is unavailable */
     height: 30px; /* You must set a specified height */
     width: 80px;
     background-position: center; /* Center the image */
@@ -70,53 +178,83 @@ html,body
 }
 
 
-/* JUST A CLASS FOR COLORING TEXT */
-.text-color {
+.sidepictureNONE {
+    background-image: url('../img/success.webp');  /* The image used  */
+    background-color: #ffffff;  /* Used if the image is unavailable */
+    max-width: 100%;
+    min-height: 100%;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+
+}
+
+/* END not needed */
+
+
+
+
+
+
+
+/* START font styling */
+.text-dark {
     color: #454545;
 }
 
+.text-bright {
+    color: whitesmoke;
+}
+
+/* END font styling */
+
+
+
 
 /* NAVBAR STYLING */
-
 /* change the background color */
-.navbar-custom {
-    background-color: white;
+
+.navbar-default {
+    background: none;
+}
+
+.nav-item {
+    margin-left : 1vw;
+    margin-right : 1vw;
 }
 
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
-    color: #454545;
+    color: rgb(229, 229, 204);
 }
 
 /* change the link color */
 .navbar-custom .navbar-nav .nav-link {
-    color: grey;
+    color: rgb(229, 229, 204);
 }
 
 /* change the color of active or hovered links */
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:focus .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
-    color: #000000;
+    color: rgb(242, 242, 242)
 }
 
 /* for dropdowns only */
 .navbar-custom .navbar-nav .dropdown-menu {
-    background-color: grey;
+    background-color: rgb(242, 242, 242);
 }
 
 /* dropdown item text color */
 .navbar-custom .navbar-nav .dropdown-item {
-    color: #000000;
+    color: rgb(204, 204, 153);
 }
 
 /* dropdown item hover or focus */
 .navbar-custom .navbar-nav .dropdown-item:hover,
 .navbar-custom .navbar-nav .dropdown-item:focus {
     color: #eeeeee;
-    background-color: red;
+    background-color: white;
 }
-
 /* END NAVBAR STYLING */
-
