--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,9 +2,9 @@
 
 /* RED BORDER FOR TESTING */
 
-    div {
+/* div {
     border: 1px solid red;
-}
+} */
 
 
 /* GLOBAL OPTIONS */
@@ -19,9 +19,8 @@ html,body
     font-family: "Heebo", sans-serif;
 }
 
-p {
-    line-height: 1.2;
-
+.footer-bg {
+    background-color: #5b704c !important;
 }
 
 
@@ -34,6 +33,16 @@ p {
         background-image: url('../img/hero_image_mobile.webp'); /* The image used */
         background-color: #cccccc; /* Used if the image is unavailable */
         height: 100vh; /* You must set a specified height */
+        width: 100%;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover; /* Resize the background image to cover the entire container */
+        }
+    
+    .hero-container-low {
+        background-image: url('../img/hero_image_mobile_sm.webp'); /* The image used */
+        background-color: #cccccc; /* Used if the image is unavailable */
+        height: 400px; /* You must set a specified height */
         width: 100%;
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
@@ -67,11 +76,22 @@ p {
             font-weight: 400;
         }
 
-        .commontext {
-            font-size: 1.2em;
+        h4,.h4 {
+            font-size: 1.3em;
             font-weight: 400;
         }
 
+        .commontext {
+            font-size: 1.2em;
+            font-weight: 300;
+        }
+
+        /* CARD STYLING START */
+        .card {
+            width: 18rem;
+        }
+
+ 
 
     }
 
@@ -82,6 +102,16 @@ p {
         background-image: url('../img/hero_image.webp'); /* The image used */
         background-color: green; /* Used if the image is unavailable */
         height: 500px; /* You must set a specified height */
+        width: 100%;
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover; /* Resize the background image to cover the entire container */
+        }
+
+    .hero-container-low {
+        background-image: url('../img/hero_image_sm.webp'); /* The image used */
+        background-color: green; /* Used if the image is unavailable */
+        height: 300px; /* You must set a specified height */
         width: 100%;
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
@@ -114,16 +144,28 @@ p {
             font-weight: 400;
         }
 
+        h4,.h4 {
+            font-size: 1.5em;
+            font-weight: 400;
+        }
+
         .commontext {
             font-size: 1.4em;
-            font-weight: 400;
+            font-weight: 300;
         }
 
         /* Restricts sucess image size on desktop */
         .container > img {
             max-height: 60%;
             max-width: 60%;
-        }  
+        }
+
+        /* CARD STYLING START */
+        .card {
+            width: 24rem;
+        }
+
+
 
 
     }
@@ -132,6 +174,10 @@ p {
 
 
 /* START GLOBAL font styling */
+p {
+    line-height: 1.2;
+}
+
 .text-dark {
     color: #454545;
 }
@@ -140,13 +186,49 @@ p {
     color: whitesmoke;
 }
 
+.copyright {
+    font-weight: 200;
+}
+
+.bold {
+    font-weight: 600;
+    color: #454545;
+}
+
 /* END font styling */
 
 
+/* START MAP options */
+
+iframe {
+    width:100%;
+    height:100%;
+}
+
+.mapouter {
+    position:relative;
+    text-align:right;
+    width:100%;
+    height:80vh;
+
+}
+
+.gmap_canvas {
+    overflow:hidden;
+    background:none!important;
+    width:100%;
+    height:80vh;
+
+ 
+}
+/* END MAP options */
 
 
 
-/* Call to action button style */
+
+
+
+/* Button styles START */
 
 .btn {
     width: fit-content;
@@ -165,7 +247,26 @@ p {
     
     }
 
+.btn-saada {
+    /* width: fit-content; */
+    height: fit-content;
+    margin-top: 40px;
+    font-family: "Heebo", sans-serif;
+    font-size: 1.2rem;
+    font-weight: normal;
+    background-color: #87b865;
+    border-radius: 3px;
+    border: 1px solid silver;
+    padding: 16px 36px;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 0.2rem;
+    
+    }
 
+
+
+/* Button styles END */
 
 
 
@@ -246,4 +347,6 @@ p {
     color: #eeeeee;
     background-color: white;
 }
+
+ul.nav a:hover { color: #fff !important; }
 /* END NAVBAR STYLING */
