--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,6 +165,14 @@ html,body
             width: 24rem;
         }
 
+        .card-left {
+            margin-left: 10rem;
+        }
+
+        .card-right {
+            margin-right: 10rem;
+        }
+
 
 
 
