phone number no wrap added, made the phone icon smaller

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,6 +91,10 @@ html,body
             width: 18rem;
         }
 
+        .phone-icon {
+            max-width: 30vw;
+            height: auto;
+        }
  
 
     }
