--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,9 +2,9 @@
 
 /* RED BORDER FOR TESTING */
 
-/* div {
+/*  div {
     border: 1px solid red;
-} */
+}  */
 
 
 /* GLOBAL OPTIONS */
@@ -90,14 +90,23 @@ html,body
         .card {
             width: 18rem;
         }
-
+        /* Phone icon size */
         .phone-icon {
             max-width: 30vw;
             height: auto;
         }
- 
+
+        /* MAP options */
+        .map-responsive{
+            overflow:hidden;
+            padding-bottom:500px;
+            position:relative;
+            height:0;
+        }
 
     }
+
+/* END MOBILE VIEW */
 
 /* DESKTOP VIEW */
   @media (min-width: 577px) {
@@ -177,10 +186,18 @@ html,body
             margin-right: 10rem;
         }
 
+        /* MAP options */
 
-
+        .map-responsive{
+            overflow:hidden;
+            padding-bottom:700px;
+            position:relative;
+            height:0;
+        }
 
     }
+
+/* END DESKTOP VIEW */
 
 
 
@@ -212,31 +229,16 @@ p {
 
 /* START MAP options */
 
-iframe {
-    width:100%;
+.map-responsive iframe{
+    left:0;
+    top:0;
     height:100%;
-}
-
-.mapouter {
-    position:relative;
-    text-align:right;
     width:100%;
-    height:80vh;
-
+    position:absolute;
 }
 
-.gmap_canvas {
-    overflow:hidden;
-    background:none!important;
-    width:100%;
-    height:80vh;
 
- 
-}
 /* END MAP options */
-
-
-
 
 
 
